--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.8",
@@ -34,6 +36,7 @@
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
+    "vitest": "^2.1.8",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
