--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "ib-insync>=0.9.86",
     "pandas>=2.0.0",
     "nest_asyncio>=1.5.0",
+    "massive>=2.0.3",
+    "python-dotenv>=1.0.0",
 ]
 
 [tool.uv]
