--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "nest_asyncio>=1.5.0",
     "massive>=2.0.3",
     "python-dotenv>=1.0.0",
+    "openai>=1.0.0",
 ]
 
 [tool.uv]
