--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 MASSIVE_API_KEY=your_massive_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
+NGROK_BASIC_AUTH_GIRISH=girish:replace_me
+NGROK_BASIC_AUTH_ALEXANDRA=alexandra:replace_me
+NGROK_DOMAIN=ag-tradeshape.ngrok.io
+NGROK_PORT=3000
