--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
-MASSIVE_API_KEY=your_massive_api_key_here
-OPENAI_API_KEY=your_openai_api_key_here
+MASSIVE_API_KEY=
+OPENAI_API_KEY=
 NGROK_DOMAIN=ag-tradeshape.ngrok.io
 NGROK_PORT=3000
 NGROK_OAUTH_PROVIDER=google
-NGROK_OAUTH_ALLOW_EMAILS=girish@example.com,alexandra@example.com
+NGROK_OAUTH_ALLOW_EMAILS=girish@girishgupta.com,alexandra.ulmer@gmail.com
+DATA_PROVIDER=massive
+NEWS_PROVIDER=massive
+BROKERAGE_PROVIDER=ibkr
