--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,18 @@
 MASSIVE_API_KEY=
 OPENAI_API_KEY=
+
+# Alpaca (optional - for alpaca provider/broker)
+ALPACA_API_KEY=
+ALPACA_API_SECRET=
+ALPACA_PAPER=true
+
+# Provider selection
+DATA_PROVIDER=massive    
+NEWS_PROVIDER=massive    
+BROKERAGE_PROVIDER=ibkr  
+
+# Ngrok (optional - for remote access)
 NGROK_DOMAIN=ag-tradeshape.ngrok.io
 NGROK_PORT=3000
 NGROK_OAUTH_PROVIDER=google
-NGROK_OAUTH_ALLOW_EMAILS=girish@girishgupta.com,alexandra.ulmer@gmail.com
-DATA_PROVIDER=massive
-NEWS_PROVIDER=massive
-BROKERAGE_PROVIDER=ibkr
+NGROK_OAUTH_ALLOW_EMAILS=
