--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "massive>=2.0.3",
     "python-dotenv>=1.0.0",
     "openai>=1.0.0",
+    "alpaca-py>=0.30.0",
 ]
 
 [tool.uv]
